# maths

./: CMakeLists.txt  geometry.cpp  geometry.hpp
cmake/: FindSystem.cmake
includes/: geometry.hpp
tests/: TestGeometry.cpp  TestInterpolation.cpp
